added deals and discount section

--- a/style.css
+++ b/style.css
@@ -206,6 +206,11 @@ select {
     margin-top: 24px;
 }
 
+#choose-container>h1,
+#choose-container>p {
+    text-align: center;
+}
+
 #choose-card-container {
     display: flex;
     flex-direction: column;
@@ -235,7 +240,6 @@ select {
 .choose-card>h3 {
     font-size: 1.25rem;
     color: #131318;
-    text-align: left;
     font-weight: 800;
     margin: 16px 0;
 }
@@ -264,7 +268,93 @@ select {
 
 /* Discount Section */
 
+.discount-container {
+    margin-top: 24px;
+}
 
+.discount-card {
+    border-radius: 16px;
+    padding: 187px 16px 16px;
+}
+
+.discount-card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.discount-card-1 {
+    background-image: url('./Images/Group 39.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.discount-card-2 {
+    background-image: url('./Images/Group 40.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.discount-card-3 {
+    background-image: url('./Images/Group 39.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.inner-discount-card {
+    border-radius: 16px;
+    border: 2px solid #FFF;
+    background: rgba(255, 255, 255, 0.80);
+    backdrop-filter: blur(2.5px);
+    padding: 24px 25px;
+}
+
+.inner-discount-card>h3 {
+    font-size: clamp(1.25rem, 0.648vw + 1.098rem, 1.5rem);
+    line-height: clamp(1.5rem, 0.778vw + 1.318rem, 1.8rem);
+    margin-bottom: 8px;
+    color: #131318;
+}
+
+.inner-discount-card>p {
+    color: #5A5A5D;
+    font-weight: 400;
+    line-height: 24px;
+    margin-bottom: 16px;
+}
+
+#price {
+    color: #FF5400;
+    font-size: clamp(1rem, 0.648vw + 0.848rem, 1.25rem);
+    line-height: clamp(1.2rem, 0.778vw + 1.018rem, 1.5rem);
+    font-weight: 800;
+}
+
+.day-info {
+    display: flex;
+    gap: 8px;
+}
+
+.location {
+    display: flex;
+    gap: 23px;
+    margin: 16px 0;
+}
+
+.location>div {
+    display: flex;
+    gap: 8px;
+}
+
+.btn-package {
+    display: block;
+    margin-top: 24px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 
 /* MOBILE */
@@ -417,6 +507,56 @@ select {
 
     .row-2 {
         width: 50%;
+    }
+
+    /* Discount Section */
+
+    .discount-container {
+        margin-top: 100px;
+    }
+
+    .discount-container>h1 {
+        text-align: center;
+    }
+
+    .discount-container>p {
+        text-align: center;
+        width: 676px;
+        margin: 24px auto;
+    }
+
+    /* Discount Section */
+
+    .inner-discount-card {
+        padding: 50px;
+        width: 589px;
+    }
+
+    .discount-card {
+        padding: 56px 0;
+        position: relative;
+    }
+
+    .inner-1 {
+        position: relative;
+        left: 90%;
+        transform: translateX(-90%);
+    }
+
+    .inner-2 {
+        position: relative;
+        left: 10%;
+        transform: translateX(-10%);
+    }
+
+    .inner-3 {
+        position: relative;
+        left: 90%;
+        transform: translateX(-90%);
+    }
+
+    .btn-package {
+        margin-top: 48px;
     }
 }
 
