--- a/style.css
+++ b/style.css
@@ -14,12 +14,13 @@
   font-family: "Mulish", sans-serif;
 }
 
-html {
-  padding: 20px;
-}
-
 body {
   background-color: #fff;
+}
+
+header,
+main {
+  padding: 20px;
 }
 
 button {
@@ -45,7 +46,13 @@ button {
   line-height: clamp(1.05rem, 0.242vw + 1.05rem, 1.2rem);
   line-height: 24px;
   margin: 24px 0;
-  text-align: center;
+}
+
+hr {
+  height: 1px;
+  background: rgba(19, 19, 24, 0.1);
+  border: none;
+  outline: none;
 }
 
 /* HEADER */
@@ -393,6 +400,71 @@ select {
   width: 100%;
 }
 
+/* Newletter ection */
+
+.newsletter-container {
+  margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.newletter-left {
+  padding: 24px;
+  border: 1px solid #ff5400;
+  border-radius: 16px;
+}
+
+.newletter-left h1,
+.newletter-left p {
+  text-align: left;
+}
+
+.newletter-left > form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.newletter-left input {
+  border-radius: 8px;
+  background: rgba(19, 19, 24, 0.05);
+  padding: 16px 20px;
+  border: none;
+  outline: none;
+}
+
+.btn-subcribe {
+  margin-top: 20px;
+  width: 100%;
+}
+
+.newsletter-right {
+  position: relative;
+}
+
+.newsletter-right img {
+  width: 100%;
+}
+
+.newsletter-discount {
+  position: absolute;
+  right: 5px;
+  bottom: 35px;
+  border-radius: 10.569px;
+  background: #ff5400;
+  width: 214.023px;
+  height: 79.268px;
+  transform: rotate(-19.628deg);
+  flex-shrink: 0;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+
 /* MOBILE */
 @media (min-width: 600px) {
   .destination-img img {
@@ -628,6 +700,26 @@ select {
 
   .place-container div:nth-child(2) {
     width: 50%;
+  }
+
+  /* Newletter Container */
+
+  .newsletter-container {
+    margin-top: 100px;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .newletter-left {
+    width: 40%;
+  }
+
+  .newletter-left p {
+    text-align: left;
+  }
+
+  .newsletter-right {
+    width: 60%;
   }
 }
 
