--- a/style.css
+++ b/style.css
@@ -465,6 +465,35 @@ select {
   color: #fff;
 }
 
+/* Footer */
+
+footer {
+  margin-top: 24px;
+  background: rgba(19, 19, 24, 0.05);
+  padding: 33px 44px;
+}
+
+footer p {
+  text-align: center;
+}
+
+.social-icon {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+footer > hr {
+  margin-top: 36px;
+}
+
+.copywrite {
+  margin-top: 24px;
+  color: #131318;
+  font-size: 0.875rem;
+}
+
 /* MOBILE */
 @media (min-width: 600px) {
   .destination-img img {
@@ -724,9 +753,18 @@ select {
 }
 
 @media (min-width: 1200px) {
-  body {
+  html {
+    padding: 0;
+  }
+
+  header,
+  main {
     width: 1200px;
     margin: 0 auto;
+  }
+
+  footer {
+    width: 100%;
   }
 
   /* BANNER */
