--- a/style.css
+++ b/style.css
@@ -494,6 +494,33 @@ footer > hr {
   font-size: 0.875rem;
 }
 
+.extra-container {
+  margin-top: 24px;
+  background-image: linear-gradient(
+      180deg,
+      rgba(19, 19, 24, 0.8) 0%,
+      rgba(19, 19, 24, 0) 100%
+    ),
+    url("./Images/extra.avif");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 24px;
+  padding: 50px;
+}
+
+.extra-container p,
+.extra-container h1 {
+  color: #fff;
+  text-align: center;
+  width: 100%;
+}
+
+.btn-extra-section {
+  display: block;
+  margin: 0 auto;
+}
+
 /* MOBILE */
 @media (min-width: 600px) {
   .destination-img img {
@@ -529,6 +556,12 @@ footer > hr {
   #destination-container p {
     width: 643px;
     margin: 16px auto;
+  }
+
+  /* Extra Section */
+
+  .extra-container {
+    padding: 100px;
   }
 }
 
@@ -749,6 +782,13 @@ footer > hr {
 
   .newsletter-right {
     width: 60%;
+  }
+
+  /* Extra section */
+
+  .extra-container {
+    margin-top: 100px;
+    padding: 150px;
   }
 }
 
